--- a/app/assets/javascripts/home/_home.html
+++ b/app/assets/javascripts/home/_home.html
@@ -1,8 +1,11 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="HomeCtrl as homeCtrl">
   <div class="row">
   	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3"></div>
   	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
   		<h3>Welcome to Customer Support</h3>
+  		<div class="ticketcreated">
+  		  <p>status: {{ homeCtrl.ticketcreated }}</p>
+  		</div>
   		<a class="btn btn-primary" ui-sref="create_ticket">Create Support Ticket</a>
   	</div>
   	<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3"></div>
