--- a/app/assets/javascripts/home/_home.html
+++ b/app/assets/javascripts/home/_home.html
@@ -4,8 +4,8 @@
   	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
   		<h3>Welcome to Customer Support</h3><br>
   		<span>
-  		  <a href="#">All Tickets</a>
-  		  <a href="#">Closed Tickets</a>
+  		  <a href="#">All Tickets</a> |
+  		  <a href="#">Closed Tickets</a> |
   		  <a href="#">Open Tickets</a>
   		</span>
   		<div class="tickets">
